# Data-Structures

./: README.md
BST/: CMakeLists.txt  ToDo  run_valgrind.sh
BST/EntrevistaDeCodigoBR/: main.cpp
BST/src/: main.cpp
BST/src/bst/: CMakeLists.txt  bst.h
Linked-List/: CMakeLists.txt
Linked-List/src/: main.cpp  mainTest.cpp
Linked-List/src/linked-list/: CMakeLists.txt  linked_list.cpp  linked_list.h
Matrix/: CMakeLists.txt  run_valgrind.sh
Matrix/inputs/: m3.txt  m5.txt  m7.txt
Matrix/src/: main.cpp  mainTest.cpp
Matrix/src/matrix/: CMakeLists.txt  matrix.cpp  matrix.h
Queue/: CMakeLists.txt
Queue/src/: main.cpp  mainTest.cpp
Queue/src/queue/: CMakeLists.txt  queue.h
Stack/: CMakeLists.txt  run_valgrind.sh
Stack/src/: main.cpp  mainTest.cpp
Stack/src/stack/: CMakeLists.txt  stack.cpp  stack.h
