cmake_minimum_required(VERSION 2.8.12)

PROJECT(BST)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

ADD_SUBDIRECTORY(src/bst)

ADD_EXECUTABLE(BST src/main.cpp)
#ADD_EXECUTABLE(BSTTest src/mainTest.cpp)

ADD_DEPENDENCIES(BST bst)
#ADD_DEPENDENCIES(BSTTest bst)

TARGET_LINK_LIBRARIES(BST bst dl m)
#TARGET_LINK_LIBRARIES(BSTTest bst dl m)
